# django-coding-devops

./: README.md  pyproject.toml
django_coding_devops/: apps.py
django_coding_devops/models/: __init__.py  depot.py  project.py
django_coding_devops/serializers/: depot.py
example/: manage.py
tests/: models.py  test_apps.py  test_models_project.py
